force-app/main/default/objects/Learning_File_View_Details_Total__c/Learning_File_View_Details_Total__c.object-meta.xml
<CustomObject>
    <label>Learning File View Details Total</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning File View Details Total</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>