force-app/main/default/objects/Learning_File_View_Details_Total__c/fields/Last_Check_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Check_Time__c</fullName>
    <formula>LastModifiedDate</formula>
    <label>Last Check Time</label>
    <type>DateTime</type>
</CustomField>