force-app/main/default/objects/Learning_File_View_Details_Total__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <formula>TEXT( User__r.Sales_Region__c )</formula>
    <label>Sales Region</label>
    <type>Text</type>
</CustomField>